CKAD/older-exercises/nginx-deploy-networkpolicy.yaml
# Create a NetworkPolicy so that only pods with labels 'access: granted' can access the deployment and apply it
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-deploy-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: nginx-deploy
  ingress: # allow ingress traffic
  - from:
    - podSelector: # from pods
        matchLabels: # with this label
          access: granted
